--- a/.gitignore
+++ b/.gitignore
@@ -71,6 +71,8 @@ apps/ios/*.mobileprovision
 .local/
 IDENTITY.md
 USER.md
+!docs/reference/templates/IDENTITY.md
+!docs/reference/templates/USER.md
 .tgz
 
 # local tooling
