--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,5 @@ USER.md
 .agent/*.json
 !.agent/workflows/
 local/
+!src/commands/onboard-non-interactive/local/
+!src/commands/onboard-non-interactive/local/**
